Add keywords to frontmatter

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -1,6 +1,9 @@
 ---
 title: Arkeologi
 description: Dette er en beskrivelse av temaet arkeologi.
+keywords: 
+  - stein
+  - arkeologi
 asIndexPage: true
 ---
 
