--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -1,6 +1,9 @@
 ---
 title: Bokstaver og tegn
 description: Dette er en beskrivelse av temaet bokstaver og tegn.
+keywords: 
+  - bokstaver
+  - tegn
 asIndexPage: true
 ---
 
