--- a/content/tema/det-store-utland/index.mdx
+++ b/content/tema/det-store-utland/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: Det store utland
 description: Dette er en beskrivelse av temaet det store utland.
+keywords: 
+  - utland
+  - land
+  - utenriks
 asIndexPage: true
 ---
 
