--- a/content/tema/dyr/bucher-og-blaakvalen.mdx
+++ b/content/tema/dyr/bucher-og-blaakvalen.mdx
@@ -1,6 +1,12 @@
 ---
 title: Bucher og blåkvale
 description: 
+keywords: 
+  - bucher
+  - blåkval
+  - blåkvalen
+  - zoologi
+  - natur
 ---
 
 <ContentGrid>
