--- a/content/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk.mdx
+++ b/content/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk.mdx
@@ -1,6 +1,13 @@
 ---
 title: Kaffe og elskov i blåhvalens buk
 description: 
+keywords: 
+  - kaffe
+  - elskov
+  - blåhval
+  - blåhvalen
+  - zoologi
+  - natur
 ---
 
 <ContentGrid>
