--- a/content/tema/fisk/christie-og-de-maerkelige-fiske.mdx
+++ b/content/tema/fisk/christie-og-de-maerkelige-fiske.mdx
@@ -1,5 +1,11 @@
 ---
 title: Christie og de «mærkelige Fiske»
+description: Dette er en beskrivelse av Christie og de «mærkelige Fiske».
+keywords: 
+  - christie
+  - fisk
+  - zoologi
+  - natur
 ---
 
 <ContentGrid className="mt-10">
