--- a/content/tema/fisk/index.mdx
+++ b/content/tema/fisk/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: Fisk
 description: Dette er en beskrivelse av temaet fisk.
+keywords: 
+  - fisk
+  - zoologi
+  - natur
 asIndexPage: true
 ---
 
