--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: Helse
 description: Dette er en beskrivelse av temaet helse.
+keywords: 
+  - helse
+  - helsevern
+  - natur
 asIndexPage: true
 ---
 
