--- a/content/tema/hverdag/index.mdx
+++ b/content/tema/hverdag/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: Hverdag
 description: Dette er en beskrivelse av temaet hverdag.
+keywords: 
+  - hverdag
+  - natur
+  - dagligliv
 asIndexPage: true
 ---
 
