--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -1,6 +1,11 @@
 ---
 title: Kirkekunst
 description: Dette er en beskrivelse av temaet kirkekunst.
+keywords: 
+  - kirkekunst
+  - kirke
+  - kunst
+  - natur
 asIndexPage: true
 ---
 
