--- a/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
+++ b/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
@@ -1,6 +1,14 @@
 ---
 title: Astrid Monsen – En kvinnelig pioner ved Bergens Museum
 description: 
+keywords: 
+  - astrid monsen
+  - geologi
+  - natur
+  - kvinnelig
+  - forsker
+  - bergens museum
+  - mineralogisk-geologisk avdeling
 ---
 
 <ContentGrid>
