--- a/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
+++ b/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
@@ -1,6 +1,13 @@
 ---
 title: Geologi og folkeliv i Hardanger
 description: Geologi og folkeliv i Hardanger
+keywords: 
+  - geologi
+  - natur
+  - hardanger
+  - folkeliv
+  - feltarbeid
+  - feltbok
 ---
 
 <ContentGrid>
