--- a/content/tema/stein/geologiske-undervisningsplansjer.mdx
+++ b/content/tema/stein/geologiske-undervisningsplansjer.mdx
@@ -1,6 +1,12 @@
 ---
 title: Geologiske undervisningsplansjer
 description: 
+keywords: 
+  - geologi
+  - natur
+  - feltarbeid
+  - feltbok
+  - feltbøker
 ---
 
 <ContentGrid>
