--- a/content/tema/stein/index.mdx
+++ b/content/tema/stein/index.mdx
@@ -1,6 +1,13 @@
 ---
 title: Stein
 description: Dette er en beskrivelse av temaet stein.
+keywords: 
+  - stein
+  - natur
+  - geologi
+  - feltarbeid
+  - feltbok
+  - feltbøker
 asIndexPage: true
 ---
 
