--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -1,6 +1,11 @@
 ---
 title: Tid og rom
 description: Dette er en beskrivelse av temaet tid og rom.
+keywords: 
+  - tid
+  - rom
+  - natur
+  - tid og rom
 asIndexPage: true
 ---
 
