--- a/content/tema/vekster/bokflora.mdx
+++ b/content/tema/vekster/bokflora.mdx
@@ -1,6 +1,12 @@
 ---
 title: Bokflora
 description: Bokflora
+keywords: 
+  - bokflora
+  - botanikk
+  - natur
+  - bok
+  - bøker
 ---
 
 <ContentGrid>
