--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: Vekster
 description: Dette er en beskrivelse av temaet vekster.
+keywords: 
+  - vekster
+  - natur
+  - botanikk
 asIndexPage: true
 ---
 
