--- a/content/tema/vekster/miranda-boedtker.mdx
+++ b/content/tema/vekster/miranda-boedtker.mdx
@@ -1,6 +1,12 @@
 ---
 title: Miranda Bødtker
 description: Miranda Bødtker
+keywords: 
+  - miranda bødtker
+  - botanikk
+  - natur
+  - tegning
+  - akvarell
 ---
 
 <ContentGrid>
