--- a/content/tema/vann-vaer-og-vind/index.mdx
+++ b/content/tema/vann-vaer-og-vind/index.mdx
@@ -1,7 +1,12 @@
 ---
 title: Vann, vær og vind
-sidebarTitle: Vann, vær og vind
 description: Dette er en beskrivelse av temaet vann, vær og vind.
+keywords: 
+  - vann
+  - vær
+  - vind
+  - natur
+  - vann, vær og vind
 asIndexPage: true
 ---
 
