--- a/content/documentation/live-preview.mdx
+++ b/content/documentation/live-preview.mdx
@@ -4,8 +4,8 @@ title: Live Preview
 
 import Image from 'next/image'
 import { Steps } from 'nextra/components'
-import gh_npm_run_dev from './gh_npm_run_dev.png'
-import gh_open_port from './gh_open_port.png'
+import gh_npm_run_dev from './_images/gh_npm_run_dev.png'
+import gh_open_port from './_images/gh_open_port.png'
 
 # Live Preview
 
