--- a/content/documentation/markdown.mdx
+++ b/content/documentation/markdown.mdx
@@ -10,6 +10,8 @@ This is a guide for the Markdown syntax that can be used to create content for t
 
 Markdown is a lightweight markup language used to format text using a simple syntax. It's widely used for documentation, README files, and content creation. Here’s a beginner-friendly guide to the most common features with examples.
 
+For a starter Markdown page, see the [Starter Markdown page](/documentation/starter-markdown-page).
+
 ## Paragraphs
 
 Use a blank line to separate paragraphs. Make sure to use a blank line between paragraphs, otherwise the paragraphs will be merged together!
