--- a/content/documentation/starter-markdown-page.mdx
+++ b/content/documentation/starter-markdown-page.mdx
@@ -9,7 +9,7 @@ keywords:
 
 # Starter Markdown page
 
-You can copy and paste the following code to create a new Markdown page. When you are in the Codespace editor, you can right click on a folder you want to create a new page in and select "New file". Give the file a name with `.mdx` extension and paste the code into the file.
+You can copy and paste the following code to create a new Markdown page. When you are in the Codespace editor, you can right click on a folder you want to create a new page in and select "New file". Give the file a name (using `-` for spaces, all lowercase) with `.mdx` extension and paste the code into the file.
 
 ```tsx copy
 ---
