--- a/content/tema/dyr/index.mdx
+++ b/content/tema/dyr/index.mdx
@@ -11,19 +11,20 @@ import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 
-<ContentGrid>
 
-<Hero variant="dyr">
+<Hero variant="dyr" className="bg-um-dyr-tint/60">
   <HeroImage src="/dyr-hero-ill.png" alt="Dyr" className="border-um-dyr-solid" />
-  <HeroContent className="bg-um-dyr-solid">
-    <HeroTitle>
-      Dyr
-    </HeroTitle>
+  <HeroContent >
     <HeroDescription>
       Her er en liste over temaene
     </HeroDescription>
+    <HeroTitle>
+      Dyr
+    </HeroTitle>
   </HeroContent>
 </Hero>
+
+<ContentGrid>
 
 I november 1901 strandet en 4,5 meter lang Nordspisshval (Mesoplodon bidens) ved Rugsund i Nordfjord. Nordspisshvalen, som tilhører nebbhval- eller spisshvalfamilen, ble avlevert til Bergens Museum, der den ved ankomsten ble fotografert liggende på en vogn i en snødekt museumshage. Det fascinerende ved nettopp denne hvalen er at den er et godt eksempel på hvordan et vitenskapelig funn ble dokumentert i ulike formater, som vi gjenfinner i samlingene våre i dag – som fysiske objekter, som gipsmodell, i fotografi og tegninger, i en notatbok, og i en vitenskapelig artikkel. 
 
