--- a/content/tema/fisk/index.mdx
+++ b/content/tema/fisk/index.mdx
@@ -11,11 +11,10 @@ asIndexPage: true
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 
-<ContentGrid>
 
-<Hero variant="fisk">
+<Hero variant="fisk" className="bg-um-fisk-tint/60">
   <HeroImage src="/fisk-hero-ill.png" alt="Fisk" className="border-um-fisk-solid" />
-  <HeroContent className="bg-um-fisk-solid">
+  <HeroContent>
     <HeroTitle>
       Fisk
     </HeroTitle>
@@ -24,6 +23,8 @@ import { Card, Cards } from '@/components/card'
     </HeroDescription>
   </HeroContent>
 </Hero>
+
+<ContentGrid>
 
 I desember 1839 sendte W.F.K. Christie ut en anmodning til «Det Bergenske Musæums Velyndere, om at forskaffe Musæet Natur-Gjenstande, som fanges i Søen». Gjennom museets gavelister kan vi spore om «Velynderne» fulgte Christies anmodning, men uansett er fiskene som ble avlevert og bevart i «Brændevin» ved museet i 1840-årene for lengst gått i oppløsning.  Men mange av eksemplarene er heldigvis bevart i visuell form, dokumentert i fargerike akvareller og tegninger. 
 
