--- a/content/tema/stein/index.mdx
+++ b/content/tema/stein/index.mdx
@@ -15,11 +15,10 @@ import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 
-<ContentGrid>
 
-<Hero variant="stein">
+<Hero variant="stein" className="bg-um-stein-tint/60">
   <HeroImage src="/stein-hero-ill.png" alt="Stein" className="border-um-stein-solid" />
-  <HeroContent className="bg-um-stein-solid">
+  <HeroContent>
     <HeroTitle>
       Stein
     </HeroTitle>
@@ -28,6 +27,8 @@ import { Card, Cards } from '@/components/card'
     </HeroDescription>
   </HeroContent>
 </Hero>
+
+<ContentGrid>
 
 Denne vakre korallfossilen, Reuschia aperta Kiær, er utstilt ved Universitetsmuseet i Bergen. Den ble funnet av fossilsamleren Olaf Hanssen i hans hjembygd Hegglandsdalen i Os. Hanssen avleverte mange tilsvarende fossiler fra Hegglandsdalen til Bergens Museum, og han deltok på feltarbeid som assistent til museets geologikonservator Astrid Monsen i 1920-årene. Et tilsvarende fossil fra Hegglandsdalen finnes på et fotografi i en av Monsens feltbøker fra Os, trolig fotografert av Monsen selv. 
 
