--- a/content/index.mdx
+++ b/content/index.mdx
@@ -7,9 +7,11 @@ import data from './1825-1875.json'
 
 <ContentGrid>
 
-<div className="text-2xl font-bold text-center">En digital jubileumsutstilling</div>
+<div className="text-xl text-center pt-20">
+  <h2 className="text-4xl font-medium text-center">En digital jubileumsutstilling</h2>
 
-Denne nettutstillingen feirer 200 år med forskning, bevaring og formidling av kulturarv ved Universitetsmuseet i Bergen. Gjennom digitale IIIF-manifester kan du utforske våre samlinger og lære mer om museets historie og betydning.
+  Denne nettutstillingen feirer 200 år med forskning, bevaring og formidling av kulturarv ved Universitetsmuseet i Bergen. Gjennom digitale IIIF-manifester kan du utforske våre samlinger og lære mer om museets historie og betydning.
+</div>
 
 <NavCards title="Tematiske fortellinger" />
 
