--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -10,11 +10,10 @@ import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 
-<ContentGrid>
 
-<Hero variant="glass">
+<Hero variant="glass" className="bg-um-glass-tint/60">
   <HeroImage src="/glass-hero-ill.png" alt="Glass" className="border-um-glass-solid" />
-  <HeroContent className="bg-um-glass-solid">
+  <HeroContent>
     <HeroTitle>
       Glass
     </HeroTitle>
@@ -23,6 +22,8 @@ import { Card, Cards } from '@/components/card'
     </HeroDescription>
   </HeroContent>
 </Hero>
+
+<ContentGrid>
 
 {/* <Cards title="Historier om fisk">
   <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
