--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -13,11 +13,10 @@ import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 
-<ContentGrid>
 
-<Hero variant="kirkekunst">
+<Hero variant="kirkekunst" className="bg-um-kirkekunst-tint/60">
   <HeroImage src="/kirkekunst-hero-ill.png" alt="Kirkekunst" className="border-um-kirkekunst-solid" />
-  <HeroContent className="bg-um-kirkekunst-solid">
+  <HeroContent>
     <HeroTitle>
       Kirkekunst
     </HeroTitle>
@@ -27,6 +26,7 @@ import { Card, Cards } from '@/components/card'
   </HeroContent>
 </Hero>
 
+<ContentGrid>
 {/* <Cards title="Historier om fisk">
   <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
 </Cards> */}
