--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -13,11 +13,10 @@ import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 
-<ContentGrid>
 
-<Hero variant="tid-og-rom">
+<Hero variant="tid-og-rom" className="bg-um-tidrom-tint/60">
   <HeroImage src="/tid-og-rom-hero-ill.png" alt="Tid og rom" className="border-um-tidrom-solid" />
-  <HeroContent className="bg-um-tidrom-solid">
+  <HeroContent>
     <HeroTitle>
       Tid og rom
     </HeroTitle>
@@ -26,6 +25,8 @@ import { Card, Cards } from '@/components/card'
     </HeroDescription>
   </HeroContent>
 </Hero>
+
+<ContentGrid>
 
 {/* <Cards title="Historier om fisk">
   <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
