--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -12,11 +12,10 @@ import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 
-<ContentGrid>
 
-<Hero variant="vekster">
+<Hero variant="vekster" className="bg-um-vekster-tint/60">
   <HeroImage src="/vekster-hero-ill.png" alt="Vekster" className="border-um-vekster-solid" />
-  <HeroContent className="bg-um-vekster-solid">
+  <HeroContent>
     <HeroTitle>
       Vekster
     </HeroTitle>
@@ -25,6 +24,8 @@ import { Card, Cards } from '@/components/card'
     </HeroDescription>
   </HeroContent>
 </Hero>
+
+<ContentGrid>
 
 I midten av august 1878 botaniserte museumsdirektør D.C. Danielssen ved Adventfjorden på Svalbard, som medlem av den norske Nordhavsekspedisjonen. En av plantene han plukket var en reinrose (Dryas octopetala L.), som han puttet inn i feltdagboken sin. Og der har den blitt liggende siden, i 147 år. Det er ikke uvanlig å finne planter, moser eller lav i feltbøker og floraer i samlingene våre, men akkurat denne  reinrosa er bemerkelsesverdig godt bevart. 
 
