Update card descriptions across multiple topics for improved clarity and context. Each card now includes a brief description to enhance user understanding of the content.

--- a/content/tema/fisk/index.mdx
+++ b/content/tema/fisk/index.mdx
@@ -33,7 +33,7 @@ I andre halvdel av 1800-tallet publiserte museet oversikter og fører til sine u
 Foruten en mengde publiserte gamle plansjeverk med trykte fiskeillustrasjoner, finnes det i samlingene ved Universitetsbiblioteket bevart svært mange originalillustrasjoner av fisk, bl.a. sognepresten Iver Anker Heltzen (1785-1842) fra Hemnes i Nordland. I hans upubliserte manuskripter finnes det bl.a. beskrivelser og akvareller av «Helgelands Fiske», mange av tegningene kopiert med vekslende hell etter eldre bøker. Spranget er stort fra Heltzens noe naivistiske akvareller til fiskene tegnet med faglig presis hånd av den profesjonelle bergenskunstneren Thorolv Rasmussen under ekspedisjonen med forskningsskipet «Michael Sars» i 1910. Rasmussens uvurderlige samling er bevart ved Universitetsmuseet i Bergen. 
 
 <Cards title="Historier om fisk">
-  <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
+  <Card title="Christie og de «mærkelige Fiske»" description="Les om Christie og de «mærkelige Fiske»" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
 </Cards>
 
 Fjern meg
