--- a/content/tema/stein/index.mdx
+++ b/content/tema/stein/index.mdx
@@ -37,9 +37,9 @@ Allerede før han grunnla Bergens Museum i 1825 hadde W.F.K. Christie samlet inn
 Forskningen til geologene ved museet og senere UiB har generert store mengder arkivmateriale, særlig feltbøker, fotografier, illustrasjoner, og håndtegnede og trykte geologiske kart. Ved Universitetsbiblioteket er det bevart ca. 170 håndskrevne feltbøker, samt en mengde maskinskrevne feltbøker med fotografier. Det er bevart fotosamlinger etter flere av geologene som brukte fotografi aktivt i feltarbeidet, og det er bevart en unik samling med over 750 fargerike og håndtegnede geologiske undervisningsplansjer, de aller fleste laget av illustratører ved museet. 
 
 <Cards title="Historier om stein">
-  <Card title="Geologi og folkeliv i Hardanger" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/stein/geologi-og-folkeliv-i-hardanger" />
-  <Card title="Astrid Monsen – En kvinnelig pioner ved Bergens Museum" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum" />
-  <Card title="Geologiske undervisningsplansjer" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/stein/geologiske-undervisningsplansjer" />
+  <Card title="Geologi og folkeliv i Hardanger" description="Les om Geologi og folkeliv i Hardanger" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/stein/geologi-og-folkeliv-i-hardanger" />
+  <Card title="Astrid Monsen – En kvinnelig pioner ved Bergens Museum" description="Les om Astrid Monsen – En kvinnelig pioner ved Bergens Museum" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum" />
+  <Card title="Geologiske undervisningsplansjer" description="Les om Geologiske undervisningsplansjer" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/stein/geologiske-undervisningsplansjer" />
 </Cards>
 
 </ContentGrid>
