--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -36,10 +36,10 @@ Reinrosa er selvsagt med i alle floraene bevart i samlingene våre, fra praktver
 Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter – inneholder hele 359 reinroser, 17 funnet på Svalbard. Danielssens reinroser fra Adventfjorden i 1878 er de eldste eksemplarene i herbariet, men en ble altså godt gjemt og bevart i Danielssens feltdagbok. 
 
 <Cards title="Historier om vekster">
-  <Card title="Miranda Bødtker" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/miranda-boedtker" />
-  <Card title="Knut Fægri" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/knut-faegri" />
-  <Card title="Bokflora" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/bokflora" />
-  <Card title="Miranda Bødtkers akrareller" description="Les om jkdjfl på 2oo skjd flsdk" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="https://tohundrefortellinger.w.uib.no/2016/09/15/1999-miranda-bodtkers-akvareller/" />
+  <Card title="Miranda Bødtker" description="Les om Miranda Bødtker" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/miranda-boedtker" />
+  <Card title="Knut Fægri" description="Les om Knut Fægri" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/knut-faegri" />
+  <Card title="Bokflora" description="Les om Bokflora" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/bokflora" />
+  <Card title="Miranda Bødtkers akrareller" description="Les om Miranda Bødtkers akrareller" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="https://tohundrefortellinger.w.uib.no/2016/09/15/1999-miranda-bodtkers-akvareller/" />
 </Cards>
 
 </ContentGrid>
