--- a/content/index.mdx
+++ b/content/index.mdx
@@ -8,13 +8,13 @@ import data from './1825-1875.json'
 <ContentGrid>
 
 <div className="text-xl text-center pt-20">
-  <h2 className="text-4xl font-medium text-center">En digital jubileumsutstilling</h2>
+  <h2 className="text-xl text-center">— En digital jubileumsutstilling —</h2>
 
   Denne nettutstillingen feirer 200 år med forskning, bevaring og formidling av kulturarv ved Universitetsmuseet i Bergen. Gjennom digitale IIIF-manifester kan du utforske våre samlinger og lære mer om museets historie og betydning.
 </div>
 
 <NavCards title="Tematiske fortellinger" />
 
-<Carousel title="En institusjon blir til" period="1825-1875" data={data} />
+<Carousel title="En institusjon blir til" period="1825 — 1875" data={data} />
 
 </ContentGrid>
