La til to demo bilder

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -55,7 +55,7 @@ Figur 6. Tegning utført av E. Mehl.
   <Card 
     title="Den yngre Jernalders Sværd: et Bidrag til Vikingtidens Historie og Teknologi" 
     description="Les Haakon Sheteligs rapport fra 1902" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
     imageAlt="" 
     href="https://www.nb.no/items/URN:NBN:no-nb_digibok_2016011907543?page=33" />
   <Card 
@@ -68,7 +68,7 @@ Figur 6. Tegning utført av E. Mehl.
   <Card 
     title="Vikingarven" 
     description="Les om nye undersøkelser av Myklebusthaugen" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    image="/images/arkeologi/tegning-myklebustmannen.png" 
     imageAlt="" 
     href="https://riksantikvaren.no/kartlegger-vikingarven-som-mulig-verdensarv/" 
   />
