La til bilde og card

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -52,6 +52,13 @@ Figur 6. Tegning utført av E. Mehl.
 
  
 <Cards title="Historier om arkeologi">
+ <Card 
+    title="Myklebustfunnet" 
+    description="Den storslåtte skipsgraven fra vikingtid" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="" 
+    href="https://tohundrefortellinger.w.uib.no/1874/10/04/1874-myklebustskipet/" 
+  />
   <Card 
     title="Den yngre Jernalders Sværd: et Bidrag til Vikingtidens Historie og Teknologi" 
     description="Les Haakon Sheteligs rapport fra 1902" 
