Endret teksten i cards

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -53,45 +53,25 @@ Figur 6. Tegning utført av E. Mehl.
  
 <Cards title="Historier om arkeologi">
  <Card 
-    title="Myklebustfunnet" 
-    description="Den storslåtte skipsgraven fra vikingtid" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    title="Myklebustskipet" 
+    description="Les mer om den storslåtte skipsgraven fra vikingtid funnet på gården Myklebust" 
+    image="/images/arkeologi/B2978_Myklebustmannen.jpg" 
     imageAlt="" 
     href="https://tohundrefortellinger.w.uib.no/1874/10/04/1874-myklebustskipet/" 
   />
   <Card 
-    title="Den yngre Jernalders Sværd: et Bidrag til Vikingtidens Historie og Teknologi" 
-    description="Les Haakon Sheteligs rapport fra 1902" 
-    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
-    imageAlt="" 
-    href="https://www.nb.no/items/URN:NBN:no-nb_digibok_2016011907543?page=33" />
-  <Card 
-    title="Det Brente Skipet" 
-    description="Er du nysgjerrig på hvordan gravritualet kan ha foregått i Vikingtiden, så se gjerne filmen laget av Archeion" 
+    title="Gravritualer i vikingtid" 
+    description="Er du nysgjerrig på hvordan gravritualer kan ha foregått i Vikingtiden? Da anbefaler vi at du ser denne filmen laget av Archeion" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="" 
     href="/tema/arkeologi/det-brente-skipet" 
   />
   <Card 
-    title="Vikingarven" 
-    description="Les om nye undersøkelser av Myklebusthaugen" 
+    title="En hilsen fra 1874" 
+    description="" 
     image="/images/arkeologi/tegning-myklebustmannen.png" 
     imageAlt="" 
     href="https://riksantikvaren.no/kartlegger-vikingarven-som-mulig-verdensarv/" 
-  />
-  <Card 
-    title="Hvem var Andres Lorange?" 
-    description="Museets første arkeolog og konservator" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
-    href="/" 
-  />
-  <Card 
-    title="Hvem var Haakon Schetelig?" 
-    description="Museets første professor i arkeologi." 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
-    href="/" 
   />
   <Card 
     title="Unimusportalen – Et skattekammer!" 
@@ -114,6 +94,29 @@ Figur 6. Tegning utført av E. Mehl.
     imageAlt="" 
     href="https://www.digitalarkivet.no/ed60219225000001" 
   />
+  <Card 
+    title="Den yngre Jernalders Sværd: et Bidrag til Vikingtidens Historie og Teknologi" 
+    description="Les Haakon Sheteligs rapport fra 1902" 
+    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
+    imageAlt="" 
+    href="https://urn.digitalarkivet.no/URN:NBN:no-a1450-ed60219225000001.jpg" />
+  
+  
+  <Card 
+    title="Hvem var Andres Lorange?" 
+    description="Museets første arkeolog og konservator" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="" 
+    href="/" 
+  />
+  <Card 
+    title="Hvem var Haakon Schetelig?" 
+    description="Museets første professor i arkeologi." 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="" 
+    href="/" 
+  />
+  
 </Cards>
 
 </ContentGrid>
